// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine gate failure audit (demo dataset, Fase 7.2) > UDS: rule-failure breakdown 1`] = `
{
  "contributionPositiveAudit": {
    "failing": 0,
    "items": [],
    "passing": 0,
    "totalSelectedContributionUp": 0,
  },
  "failingItems": [
    {
      "accion": "Decidir cierre de cuenta o intento final de recuperación con Tienda El Progreso.",
      "description": "Tienda El Progreso lleva 55 días sin comprar (compraba cada 1 días). Aportaba $819 históricamente. Decidir entre cierre de cuenta o último intento de recuperación antes de seguir …",
      "dimensionId": "cliente",
      "failedRules": [
        "pareto",
      ],
      "impactoUsdRounded": 819,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "cliente_perdido",
      "member": "Tienda El Progreso",
      "metricId": "dias_sin_compra",
      "rank": 6,
      "scoreRounded": 0.95,
      "severity": "CRITICA",
      "title": "✗ Tienda El Progreso — probablemente perdido",
    },
    {
      "accion": null,
      "description": "Supermercado López no compra hace 55 días (umbral actual: 45). Aportaba $1,633 en abril 2025.",
      "dimensionId": "cliente",
      "failedRules": [
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 1633,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "cliente_dormido",
      "member": "Supermercado López",
      "metricId": "dias_sin_compra",
      "rank": 11,
      "scoreRounded": 0.75,
      "severity": "MEDIA",
      "title": "↓ Supermercado López — sin compras hace 55 días",
    },
    {
      "accion": "Contactar a Mercado Central para entender la caída de frecuencia — confirmar si es estacional o requiere atención comercial.",
      "description": "Mercado Central tiene una frecuencia de compra de 13.00, 2.8σ por debajo del promedio del grupo (19.75). Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "outlier",
      "member": "Mercado Central",
      "metricId": "frecuencia_compra",
      "rank": 12,
      "scoreRounded": 0.7083,
      "severity": "ALTA",
      "title": "↓ Mercado Central — frecuencia de compra baja",
    },
    {
      "accion": null,
      "description": "Roberto Méndez: 5,088 uds → 3,756 uds (-26.2%). Venta del grupo: 22,882 uds → 21,703 uds (-5.2%). Roberto Méndez fue el principal responsable del descenso.",
      "dimensionId": "supervisor",
      "failedRules": [
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 1332,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "contribution",
      "member": "Roberto Méndez",
      "metricId": "venta",
      "rank": 18,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "↓ Roberto Méndez — mayor aporte al descenso en Venta",
    },
    {
      "accion": null,
      "description": "Supermercado Nacional: 254 uds vs 109 uds en el mismo período del año anterior (+133.0%) Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 310,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "change",
      "member": "Supermercado Nacional",
      "metricId": "venta",
      "rank": 19,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "↑ Supermercado Nacional — cambio en Venta",
    },
    {
      "accion": null,
      "description": "Mayoreo Santa Ana muestra una tendencia creciente en SKUs activos en los últimos 3 meses (6 → 14, +133.3%) Cliente atendido por Ana González en Santa Ana.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 196,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "trend",
      "member": "Mayoreo Santa Ana",
      "metricId": "skus_activos",
      "rank": 20,
      "scoreRounded": 1,
      "severity": "ALTA",
      "title": "📈 Mayoreo Santa Ana — tendencia creciente",
    },
  ],
  "failsByMetricAndRule": {
    "dias_sin_compra": {
      "materiality": 0,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 2,
    },
    "frecuencia_compra": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "skus_activos": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 0,
    },
    "venta": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 2,
      "pareto": 2,
    },
  },
  "failsByRule": {
    "materiality": 3,
    "monetaryCoherence": 0,
    "narrativeCoherence": 4,
    "pareto": 4,
  },
  "failsByTypeAndRule": {
    "change": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "cliente_dormido": {
      "materiality": 0,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "cliente_perdido": {
      "materiality": 0,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "contribution": {
      "materiality": 0,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "outlier": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "trend": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 0,
    },
  },
  "gateFailCount": 6,
  "gatePassCount": 14,
  "gateRescuedByContributionUpException": 0,
  "onlyMonetaryCoherenceFails": {
    "items": [],
    "total": 0,
  },
  "poolSize": 20,
  "usdSourceDistributionInR3Fails": {},
}
`;

exports[`insight-engine gate failure audit (demo dataset, Fase 7.2) > USD: rule-failure breakdown 1`] = `
{
  "contributionPositiveAudit": {
    "failing": 1,
    "items": [
      {
        "accionPresent": false,
        "dimensionId": "canal",
        "failedRules": [
          "materiality",
          "pareto",
          "narrativeCoherence",
        ],
        "impactoUsdRounded": 664,
        "impactoUsdSource": "recuperable",
        "meetsAllProposed": true,
        "meetsImpactoMin1pct": true,
        "meetsScore095": true,
        "meetsSeverityHigh": true,
        "member": "Mostrador",
        "metricId": "venta",
        "passes": false,
        "scoreRounded": 1,
        "severity": "CRITICA",
        "usdShareOfBusinessPct": 1.7,
      },
    ],
    "passing": 0,
    "totalSelectedContributionUp": 1,
  },
  "failingItems": [
    {
      "accion": "Decidir cierre de cuenta o intento final de recuperación con Tienda El Progreso.",
      "description": "Tienda El Progreso lleva 55 días sin comprar (compraba cada 1 días). Aportaba $819 históricamente. Decidir entre cierre de cuenta o último intento de recuperación antes de seguir …",
      "dimensionId": "cliente",
      "failedRules": [
        "pareto",
      ],
      "impactoUsdRounded": 819,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "cliente_perdido",
      "member": "Tienda El Progreso",
      "metricId": "dias_sin_compra",
      "rank": 8,
      "scoreRounded": 0.95,
      "severity": "CRITICA",
      "title": "✗ Tienda El Progreso — probablemente perdido",
    },
    {
      "accion": null,
      "description": "Supermercado López no compra hace 55 días (umbral actual: 45). Aportaba $1,633 en abril 2025.",
      "dimensionId": "cliente",
      "failedRules": [
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 1633,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "cliente_dormido",
      "member": "Supermercado López",
      "metricId": "dias_sin_compra",
      "rank": 13,
      "scoreRounded": 0.75,
      "severity": "MEDIA",
      "title": "↓ Supermercado López — sin compras hace 55 días",
    },
    {
      "accion": "Contactar a Mercado Central para entender la caída de frecuencia — confirmar si es estacional o requiere atención comercial.",
      "description": "Mercado Central tiene una frecuencia de compra de 13.00, 2.8σ por debajo del promedio del grupo (19.75). Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "outlier",
      "member": "Mercado Central",
      "metricId": "frecuencia_compra",
      "rank": 15,
      "scoreRounded": 0.7083,
      "severity": "ALTA",
      "title": "↓ Mercado Central — frecuencia de compra baja",
    },
    {
      "accion": null,
      "description": "Mostrador: 12,737 USD → 13,401 USD (+5.2%). Venta del grupo: 38,758 USD → 39,156 USD (+1.0%). Mostrador fue el principal responsable del crecimiento.",
      "dimensionId": "canal",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 664,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "contribution",
      "member": "Mostrador",
      "metricId": "venta",
      "rank": 20,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "↑ Mostrador — mayor aporte al crecimiento en Venta",
    },
  ],
  "failsByMetricAndRule": {
    "dias_sin_compra": {
      "materiality": 0,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 2,
    },
    "frecuencia_compra": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "venta": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
  },
  "failsByRule": {
    "materiality": 2,
    "monetaryCoherence": 0,
    "narrativeCoherence": 2,
    "pareto": 3,
  },
  "failsByTypeAndRule": {
    "cliente_dormido": {
      "materiality": 0,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "cliente_perdido": {
      "materiality": 0,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "contribution": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "outlier": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
  },
  "gateFailCount": 4,
  "gatePassCount": 16,
  "gateRescuedByContributionUpException": 0,
  "onlyMonetaryCoherenceFails": {
    "items": [],
    "total": 0,
  },
  "poolSize": 20,
  "usdSourceDistributionInR3Fails": {},
}
`;
